# Flet-Post-Notification

./: README.md  pyproject.toml
src/: main.py  notification.py
